Fix path to welcome image

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -423,7 +423,7 @@ h3.profile-title {
 .banner-bg {
   padding: 260px 80px;
   position: relative;
-  background: url("../img/welcome.jpg");
+  background: url("../static/img/welcome.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
